@@ -704,8 +704,8 @@ backslash character, in Windows file specifications,
 <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a space instance characteristics, 
 <a href="ref-change-space-instance.html">257</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;name of a scheduled function, 
 <a href="ref-scheduled-function-name.html">152</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;repeat-interval, of a scheduled function, 
-<a href="ref-scheduled-function-repeat-interval.html">153</a><br /><b>check-link-consistency</b>, 
-<a href="ref-check-link-consistency.html">217</a><br /><b>check-ot-base</b>, 
+<a href="ref-scheduled-function-repeat-interval.html">153</a><br /><b>check-link-definitions</b>, 
+<a href="ref-check-link-definitions.html">217</a><br /><b>check-ot-base</b>, 
 <a href="ref-check-ot-base.html">116</a><br /><b>children-of</b>, 
 <a href="ref-children-of.html">258</a>, <a href="ref-parent-of.html#id1"><font color="#007f00"><i>272</i></font></a>
 <br />circular list, 
@@ -967,7 +967,7 @@ date and time entities,
 <a href="ref-define-space-class.html">260</a>, <a href="ref-standard-space-class.html#id1"><font color="#007f00"><i>275</i></font></a>
 <br /><b>define-unit-class</b>, 
 <a href="ref-define-unit-class.html">192</a>, <a href="ref-standard-unit-class.html#id1"><font color="#007f00"><i>212</i></font></a>
-, <a href="ref-check-link-consistency.html#id1"><font color="#007f00"><i>217</i></font></a>
+, <a href="ref-check-link-definitions.html#id1"><font color="#007f00"><i>217</i></font></a>
 , <a href="ref-infinite-interval.html#id1"><font color="#007f00"><i>246</i></font></a>
 <br />defining
 <br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;a class, 
@@ -1756,7 +1756,7 @@ keyword symbol,
 <a href="ref-linkf.html">220</a>, 
 <a href="ref-link-setf.html">221</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;adding after removing, 
 <a href="ref-link-setf.html">221</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;definitions, checking consistency of, 
-<a href="ref-check-link-consistency.html">217</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;removing, 
+<a href="ref-check-link-definitions.html">217</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;removing, 
 <a href="ref-unlinkf.html">223</a>, 
 <a href="ref-unlinkf-all.html">224</a><br /><code>link-event</code>, <a href="ref-change-class.html#id1"><font color="#007f00"><i>190</i></font></a>
 , <a href="ref-make-duplicate-instance.html#id1"><font color="#007f00"><i>207</i></font></a>
