@@ -48,6 +48,6 @@
 <li><a href="ref-index.html">Index</a></li>
 </ul>
 <hr /><address><a target="_top" class="address"
-    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;August 23, 2008</nobr>
-<nobr>10:27&nbsp;EDT</nobr></address><br />
+    href="http://GBBopen.org/"><p>The GBBopen Project</a>,<nobr>&nbsp;August 30, 2008</nobr>
+<nobr>9:39&nbsp;EDT</nobr></address><br />
 </body></html>
